--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A sample app using Blockly",
   "main": "index.js",
   "private": true,
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "start": "webpack serve --open --mode development"
+    "build": "npx vite build",
+    "start": "npx vite"
   },
   "keywords": [
     "blockly"
@@ -16,15 +17,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/node": "^24.0.10",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
     "source-map-loader": "^4.0.1",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.4.2",
     "typescript": "^5.0.2",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "vite": "^7.0.4"
   },
   "dependencies": {
     "@blockly/plugin-workspace-search": "^10.1.0",
