--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-app-typescript",
+  "name": "blockly-editor",
   "version": "1.0.0",
   "description": "A sample app using Blockly",
   "main": "index.js",
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx vite build",
+    "build": "npx vite build --config vite.extension.config.ts && npx vite build",
     "start": "npx vite"
   },
   "keywords": [
