--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "forceConsistentCasingInFileNames": true,
     "types": ["vite/client"],
     "paths":{
-      "@/*": ["src/*"],
+      "@/*": ["./src/*"],
     }
   },
-  "include": ["src"]
+  "include": ["./src"]
 }
